250725 00:15 NEXUS: Complete templates and styling system

--- a/.env
+++ b/.env
@@ -24,10 +24,21 @@ PORT=8000
 COMPETITION_DAY=1
 TEAM_NAME=Anthropic NEXUS
 
-# CloudFlare (será configurado)
-CLOUDFLARE_TUNNEL_TOKEN=pending
-DOMAIN_APP=app.planetamicro.com.br
-DOMAIN_API=api.planetamicro.com.br
+# SocialMaster Multi-Port Configuration
+FRONTEND_PORT=8000
+API_PORT=8001  
+ADMIN_PORT=8002
+MONITOR_PORT=8003
+
+# CloudFlare Domains
+FRONTEND_DOMAIN=https://app.planetamicro.com.br
+API_DOMAIN=https://api.planetamicro.com.br
+ADMIN_DOMAIN=https://admin.planetamicro.com.br
+MONITOR_DOMAIN=https://monitor.planetamicro.com.br
+
+# CloudFlare Tunnel
+#CLOUDFLARE_TUNNEL_NAME=socialmaster-nexus
+#CLOUDFLARE_CONFIG_PATH=config/cloudflare-config.yml
 
 # Rate Limiting
 LOGIN_FAILS_NEW=5
