--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,6 @@
-# SocialMaster Core Dependencies - Team Anthropic NEXUS
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-jinja2==3.1.2
-python-multipart==0.0.6
-aiofiles==23.2.1
-
-# Database (para próximas fases)
-sqlalchemy==2.0.23
-alembic==1.12.1
-
-# Security & Auth (para próximas fases)
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-python-dotenv==1.0.0
-
-# Validation
-pydantic==2.5.0
-email-validator==2.1.0
-
-# HTTP Client (para APIs sociais futuras)
-httpx==0.25.0
-requests==2.31.0
-
-# Development
-pytest==7.4.3
-black==23.11.0
-flake8==6.1.0
+fastapi
+uvicorn[standard]
+sqlalchemy
+passlib[bcrypt]
+python-multipart
+jinja2
